tests/bad/match_upon.lens
process upon (hi){
    print(e.hi)
}
